# niggli

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
_build/html/: search.html
_build/html/.doctrees/: environment.pickle
_sources/: index.txt
doc/: conf.py  index.rst
python/: _niggli.c  setup.py
python/example/: niggli_reduction.py
python/niggli/: __init__.py  niggli.py
python/test/: conftest.py  test_niggli.py
src/: niggli.c  niggli.h  version.h
test/: test.c
